test(MyNumber): Repair unit tests following the addition of support for different types of numbers